@@ -90,6 +90,7 @@ Release 0.9.5
   the  main SQL, not the demo data)
 - make all service tests pass with dropped/reloaded demo data (and the tax
   settings)
+- zm_tests: mark skipped tests gray
 
 Release 0.9.4.2
 - improve ZMAjaxController::flattenObject(); using ZMBeanUtils, correct
